[package]
name = "mdbook-puml"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = { version = "0.4.15", default-features = false }
anyhow = "1.0.28"
clap = "2.24"
semver = "1.0.4"
log = "0.4.14"
lazy_static = "1.4.0"
serde_json = "1.0.74"
env_logger = "0.9.0"
uuid = "0.8"
aho-corasick = "0.7"
tempfile = "3.3.0"
